2007-03-20  Neil J. Patel  <njpatel@gmail.com>

	* Beryl Thumbnailer support

2007-03-09  Neil Jagdish Patel  <njpatel@gmail.com>

	* Has support for adding menu items through D-Bus. 

2007-03-07  Neil Jagdish Patel   <njpatel@gmail.com>

	* Listens to theme change signals and updates the bar as required.

2007-03-07  Neil Jagdish Patel  <njpatel@gmail.com>

	* Auto-hide now supports D&D

2007-03-07  Neil J. Patel  <njpatel@gmail.com>

	* Cleaned up auto-hide somewhat. Needs more testing

2007-03-07  Neil Jagdish Patel  <njpatel@gmail.com>

	* Merged an excellant patch by James Willcox (snorp_AT_snorp_DOT_net)
	  that makes the hover-bouncing algorithm much better
	

2007-03-07  Neil Jagdish Patel  <njpatel@gmail.com>

	* Cleaned up positioning code in awn-window.c
	* Fixed memory leak in awn-x.c
	* Fixed starup errors (GDK_IS_DRAWABLE)
	* Fixed separator positon errorsi


2007-03-07  Christian Kirbach  <christian.kirbach@googlemail.com>

	reviewed by: Neil J. Patel

	* Patch fixed 80+ compiler warnings.
	* njpatel fixed the rest, now about 2-3 warnings when compiling.
	
2007-03-07  Neil Jagdish Patel  <njpatel@gmail.com>

	* Updated TODO
 
2007-02-25  Neil Jagdish Patel  <njpatel@gmail.com>

	Added autohide support

	* src/Makefile.am:
	* src/awn-gconf.c: (awn_gconf_new):
	* src/awn-gconf.h:
	* src/awn-hotspot.c: (awn_hotspot_class_init), (awn_hotspot_init),
	(awn_hotspot_new), (awn_hotspot_destroy),
	(_on_alpha_screen_changed), (render), (render_pixmap),
	(do_shape_combine_mask), (_update_input_shape), (_on_expose),
	(_on_configure), (_position_window):
	* src/awn-hotspot.h:
	* src/awn-task-manager.c: (_find_launcher), (awn_task_manager_new):
	* src/awn-task.c: (_shell_done), (awn_task_create_menu):
	* src/awn-utils.c: (hide_window), (show_window), (awn_hide),
	(awn_show):
	* src/awn-utils.h:
	* src/main.c: (main), (enter_notify_event), (leave_notify_event):

2007-02-25  Neil Jagdish Patel  <njpatel@gmail.com>

	reviewed by: <delete if not using a buddy>
